--- a/mrmostafa/templates/base.html
+++ b/mrmostafa/templates/base.html
@@ -666,6 +666,7 @@
                             <i class="fas fa-users me-1"></i>المجموعات
                         </a>
                     </li>
+                    {% if session.user_role == 'admin' or (current_user and current_user.has_permission('take_attendance')) %}
                     <li class="nav-item">
                         <a class="nav-link {{ 'active' if request.endpoint == 'attendance' else '' }}"
                             href="{{ url_for('attendance') }}">
@@ -673,6 +674,8 @@
                             الحضور
                         </a>
                     </li>
+                    {% endif %}
+                    {% if session.user_role == 'admin' or (current_user and current_user.has_permission('manage_payments')) %}
                     <li class="nav-item">
                         <a class="nav-link {{ 'active' if request.endpoint == 'payments' else '' }}"
                             href="{{ url_for('payments') }}">
@@ -680,6 +683,7 @@
                             المدفوعات والمصروفات
                         </a>
                     </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link {{ 'active' if request.endpoint == 'grades' else '' }}"
                             href="{{ url_for('grades') }}">
